Add headers and keywords

--- a/paxos-reconf.tex
+++ b/paxos-reconf.tex
@@ -382,7 +382,7 @@
 Tracsis plc, 103 Clarendon Road, Leeds LS2 9DF, United Kingdom (email:
 d.turner@tracsis.com)
 }% <-this % stops a space
-\thanks{Unpublished draft of \pubdate, version \gitid.}%
+\thanks{Manuscript received \pubdate, version \gitid.}%
 %\thanks{Manuscript received April 19, 2005; revised August 26, 2015.}} TODO
 }
 
@@ -407,7 +407,8 @@ d.turner@tracsis.com)
 
 
 % The paper headers
-\markboth{}%TODO Journal of \LaTeX\ Class Files,~Vol.~14, No.~8, August~2015}%
+\markboth{IEEE Transactions on Parallel and Distributed Systems,~Vol.~?, No.~?,
+?~?}%TODO Journal of \LaTeX\ Class Files,~Vol.~14, No.~8, August~2015}%
 {Turner: \mytitle}
 % The only time the second header will appear is for the odd numbered pages
 % after the title page when using the twoside option.
@@ -453,9 +454,9 @@ the original bounded-pipeline approach as well as Raft-like fully-concurrent
 reconfigurations and more besides.\end{abstract}
 
 % Note that keywords are not normally used for peerreview papers.
-%\begin{IEEEkeywords} TODO???
-%IEEE, IEEEtran, journal, \LaTeX, paper, template.
-%\end{IEEEkeywords}
+\begin{IEEEkeywords}
+Distributed algorithms, distributed computing, fault tolerance
+\end{IEEEkeywords}
 
 
 
